<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_sort_options"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_options"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/group_sorting_options"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_sort_by_stars"
                    android:checked="true"
                    android:title="@string/sort_by_stars" />
                <item
                    android:id="@+id/item_sort_by_forks"
                    android:title="@string/sort_by_forks" />
                <item
                    android:id="@+id/item_sort_by_update"
                    android:title="@string/sort_by_update" />
            </group>
        </menu>
    </item>
</menu>