<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_repository_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/widget_default_margin"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:ems="8"
        android:theme="@style/RepositoryName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/repository_name" />

    <TextView
        android:id="@+id/textview_repository_description"
        style="@style/RepositoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/widget_default_margin"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:ems="12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_repository_name"
        tools:text="@string/repository_description" />

    <TextView
        android:id="@+id/textview_fork_count"
        style="@style/RepositoryStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:drawableLeft="@drawable/ic_branch"
        android:text="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_repository_description" />

    <TextView
        android:id="@+id/textview_star_count"
        style="@style/RepositoryStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:drawableLeft="@drawable/ic_star"
        android:text="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_fork_count"
        app:layout_constraintTop_toBottomOf="@+id/textview_repository_description" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:background="#FFFFFF"
        android:innerRadius="32dp"
        android:shape="ring"
        android:thicknessRatio="0"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textview_user_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_user_avatar"
            android:layout_width="@dimen/imageview_owner_avatar_size"
            android:layout_height="@dimen/imageview_owner_avatar_size"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@+id/textview_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toEndOf="@+id/textview_repository_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/textview_user_name"
        style="@style/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textview_user_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardview_user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/cardview_user_avatar"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/textview_user_full_name"
        android:layout_width="@dimen/imageview_owner_avatar_size"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_default_margin"
        android:layout_marginEnd="@dimen/widget_default_margin"
        android:layout_marginStart="@dimen/widget_default_margin"
        android:layout_marginTop="@dimen/widget_default_margin"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textview_user_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textview_user_name"
        app:layout_constraintTop_toBottomOf="@+id/textview_user_name"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/user_full_name" />

</android.support.constraint.ConstraintLayout>